--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
       <div id="chat_container"></div>
 
       <form>
-        <textarea name="prompt" rows = "1" cols="1" placeholder="Talk to me about your mental Status"></textarea>
+        <textarea name="prompt" rows = "1" cols="1" placeholder="Hi, I'm MindBot. You can talk to me about your mental health"></textarea>
         <button type="submit"><img src="assets/send.svg" /></button>
       </form>
     </div>
