--- a/client/index.html
+++ b/client/index.html
@@ -8,11 +8,12 @@
     <link rel = "stylesheet" href="style.css">
   </head>
   <body>
+    <div style="overflow:scroll"></div>
     <div id="app">
       <div id="chat_container"></div>
 
       <form>
-        <textarea name="prompt" rows = "1" cols="1" placeholder="Hi, I'm MindBot. You can talk to me about your mental health"></textarea>
+        <textarea name="prompt" rows = "1" cols="1" placeholder="Hi, I'm MindBot."></textarea>
         <button type="submit"><img src="assets/send.svg" /></button>
       </form>
     </div>
