--- a/client/index.html
+++ b/client/index.html
@@ -8,12 +8,16 @@
     <link rel = "stylesheet" href="style.css">
   </head>
   <body>
-    <div style="overflow:scroll"></div>
+    <style> 
+      html {
+        overflow-y: scroll; 
+      }
+      </style>
     <div id="app">
       <div id="chat_container"></div>
 
       <form>
-        <textarea name="prompt" rows = "1" cols="1" placeholder="Hi, I'm MindBot."></textarea>
+        <textarea name="prompt" rows = "1" cols="1" placeholder="Hi, I'm MindBot. Your mental health is my p"></textarea>
         <button type="submit"><img src="assets/send.svg" /></button>
       </form>
     </div>
