--- a/client/index.html
+++ b/client/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <style>
+      html {
+      overflow-y: scroll;
+      }
+      </style>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mind Wellness</title>
     <link rel = "stylesheet" href="style.css">
+
   </head>
   <body>
-    <style> 
-      html {
-        overflow-y: scroll; 
-      }
-      </style>
+    <div style="overflow:scroll"></div>
     <div id="app">
       <div id="chat_container"></div>
 
