--- a/client/index.html
+++ b/client/index.html
@@ -2,24 +2,22 @@
 <html lang="en">
   <head>
     <style>
-      html {
-      overflow-y: scroll;
+      body {
+        overflow-y: scroll;
       }
-      </style>
+    </style>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mind Wellness</title>
     <link rel = "stylesheet" href="style.css">
-
   </head>
   <body>
-    <div style="overflow:scroll"></div>
     <div id="app">
       <div id="chat_container"></div>
 
       <form>
-        <textarea name="prompt" rows = "1" cols="1" placeholder="Hi, I'm MindBot. Your mental health is my p"></textarea>
+        <textarea name="prompt" rows = "1" cols="1" placeholder="Hi, I'm MindBot."></textarea>
         <button type="submit"><img src="assets/send.svg" /></button>
       </form>
     </div>
