--- a/client/index.html
+++ b/client/index.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <style>
-      body {
-        overflow-y: scroll;
-      }
-    </style>
+    <div style="overflow:auto"></div>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
