--- a/client/index.html
+++ b/client/index.html
@@ -6,11 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mind Wellness</title>
     <link rel = "stylesheet" href="style.css">
-    <style>
-      body {
-        overflow-y: scroll;
-      }
-    </style>
+    <div style="height: 50px; overflow: auto;"></div>
   </head>
   <body>
     <div id="app">
