--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mind Wellness</title>
     <link rel = "stylesheet" href="style.css">
-    <div style="height: 50px; overflow: auto;"></div>
+    <div style="overflow: auto;"></div>
   </head>
   <body>
     <div id="app">
