--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
+    <script>
+      window.addEventListener('scroll', myFunction);
+      function myFunction() {
+        if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+          document.getElementById("myBar").style.width = "100%";
+        } else {
+          document.getElementById("myBar").style.width = "0%";
+        }
+      }
+  </script>
+  
+  <div id="myProgress">
+    <div id="myBar"></div>
+  </div>
+
+
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
