--- a/client/index.html
+++ b/client/index.html
@@ -6,19 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mind Wellness</title>
     <link rel = "stylesheet" href="style.css">
-    <style>
-      body {
-          overflow-y: scroll;
-      }
-      </style>
   </head>
   <body>
-    <div style="overflow-y: scroll;"> 
     <div id="app">
       <div id="chat_container"></div>
 
       <form>
-        <textarea name="prompt" rows = "1" cols="1" placeholder="Hi, I'm MindBot."></textarea>
+        <textarea name="prompt" rows = "1" cols="1" placeholder="Hi, I'm MindBot.""></textarea>
         <button type="submit"><img src="assets/send.svg" /></button>
       </form>
     </div>
