--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="app">
-      <div id="chat_container"></div>
+      <div id="chat_container" style="overflow:scroll; height:500px;"></div>
 
       <form>
         <textarea name="prompt" rows = "1" cols="1" placeholder="Hi, I'm MindBot."></textarea>
